--- a/contrib/gitian/gitian-freebsd.yml
+++ b/contrib/gitian/gitian-freebsd.yml
@@ -1,5 +1,5 @@
 ---
-name: "monero-freebsd-0.15"
+name: "monero-freebsd-0.16"
 enable_cache: true
 suites:
 - "bionic"
@@ -32,7 +32,7 @@ packages:
 - "libprotobuf-dev"
 - "python3-zmq"
 remotes:
-- "url": "https://github.com/monero-project/monero.git"
+- "url": "https://github.com/cryptofugu/monero.git"
   "dir": "monero"
 files: []
 script: |
